--- a/code/src/main/webapp/static/css/home.css
+++ b/code/src/main/webapp/static/css/home.css
@@ -86,6 +86,7 @@ a.disabled:link {cursor:no-drop; color:#999; text-decoration:none;}
 .jconfirm.white .content .menus {/* height:30px; */ line-height:30px;}
 .jconfirm.white .content .menus img {margin:0 2px; margin-top:-4px;}
 
+.form-group>label {white-space:nowrap;}
 
 /* .main_top .main_top_height {height:73px;} */
 .main_top .logo {padding:5px; font-weight:bold; color:#F00; cursor:pointer;}
