--- a/code/src/main/webapp/static/css/task_manager.css
+++ b/code/src/main/webapp/static/css/task_manager.css
@@ -1,6 +1,11 @@
 @CHARSET "UTF-8";
 
+.jconfirm .jconfirm-box-container {width:50%;}
+.jconfirm .jconfirm-box-container.lager {width:800px; margin:0 auto; transition:width .5s;}
+.jconfirm .jconfirm-box-container.orig {width:50%; transition:width .5s; margin:0 auto;}
+
 .task_manager_container {}
+.task_manager_container .src {display:none;}
 .task_manager_container .grid_pager {display:inline-block; float:right;}
 .task_manager_container .title {padding: 2px!important;
     margin: 0;
@@ -9,7 +14,38 @@
     font-size: 14px!important;
     line-height: 25px!important;
     padding-left: 5px!important;
-    margin-top: 5px;}
+    margin-top: 5px;
+}
+
+.verifying_container {}
+.verifying_container .task_detail,
+.verifying_container .fns_container {display:inline-block; height:300px; vertical-align:top;}
+
+.verifying_container .task_detail {width:75%;}
+.verifying_container .task_detail textarea {resize:none; width:100%;}
+.verifying_container .fns_container {width:24%;}
+.verifying_container .fns_container ul li {
+	padding:2px 4px; 
+	margin:2px; 
+	list-style:none; 
+	display:block; 
+	text-align:left; 
+	border:1px solid #EEE; 
+	cursor:pointer;
+	
+	border-radius:0;
+	color:#428BCB;
+	background-color:#FFF;
+    transition:margin-left .25s, background-color .5s, border-radius .5s;
+}
+.verifying_container .fns_container ul li:hover {border-color:#902; color:#902; background-color:#DFE290; border-radius:10px;}
+.verifying_container .fns_container ul li.active {position:relative; margin-left:7px; width:100%; background-color:#DFE290; border-radius:0;}
+
+.lager .left,
+.lager .right {display:inline-block; vertical-align:top; padding:5px; border:1px solid #EEE;}
+.lager .left {width:70%;}
+.verifying_container .right {width:0;}
+.lager .right {width:29%; transition:width .5s;}
 
 .task_manager_container .menus .menu {}
 
