--- a/code/src/main/webapp/static/css/home.css
+++ b/code/src/main/webapp/static/css/home.css
@@ -46,7 +46,7 @@ a.disabled:link {cursor:no-drop; color:#999; text-decoration:none;}
 .transparent_100 {filter:alpha(opacity=100); -moz-opacity:1.0; -khtml-opacity:1.0; opacity:1.0;} 
 
 .input-group .clear {cursor:pointer; background:url("../image/icos.png") no-repeat -307px 7px;}
-.min_max {float:right; width:25px; height:25px; cursor:pointer; position:absolute; right:5px; top:5px;}
+.min_max {float:right; width:25px; height:25px; cursor:pointer; position:absolute; right:5px; top:4px;}
 .min_max.min {background:url("../image/icos.png") no-repeat -18px -90px;}
 .min_max.max {background:url("../image/icos.png") no-repeat 6px -90px;}
 .min_max.max_full {background:url("../image/icos.png") no-repeat -450px -139px;}
@@ -54,6 +54,8 @@ a.disabled:link {cursor:no-drop; color:#999; text-decoration:none;}
 .choosable .anchor {width:18px; height:18px;}
 .choosable:hover .anchor{background:url('../image/commons/anchor.png') no-repeat;}
 .choosable.choosed .anchor {background:url('../image/commons/anchor_choosed.gif') no-repeat;}
+
+.disabled_scrollable {overflow:hidden!important;}
 
 /* 重写popover样式 */
 .popover .popover-content {word-break:break-all; max-width:500px;}
